--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgreSqlConnection": "Server=localhost;Port=5432;Database=mydatabase;User Id=postgres;Password=ethem2002;"
+  }
+} 
